--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -33,3 +33,25 @@ body {
   .vs-card__text {
       width: 100%;
   }
+
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #448aff;
+    height: 8px;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #448aff;
+}
