--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -16,3 +16,9 @@
     src: local("Montserrat-Semibold"),
     url("~@/assets/fonts/Montserrat/Montserrat-SemiBold.ttf") format("truetype");
 }
+
+@font-face {
+    font-family: "Montserrat-Medium";
+    src: local("Montserrat-Medium"),
+    url("~@/assets/fonts/Montserrat/Montserrat-Medium.ttf") format("truetype");
+}
