--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -3,4 +3,5 @@
 $font-light:"Montserrat-Light",Arial, Helvetica, sans-serif;
 $font-bold:"Montserrat-Bold",Arial, Helvetica, sans-serif;
 $font-semibold:"Montserrat-Semibold",Arial, Helvetica, sans-serif;
+$font-medium:"Montserrat-Medium",Arial, Helvetica, sans-serif;
 $color-red:red;
